hadoop-doc: add trino doc (#3360)
* hadoop-doc: add trino doc

* fix

* Update docs

---------

Co-authored-by: Changjian Gao <gcj@juicedata.io>